<resources>
    <string name="app_name">Bula Atendente</string>
    <string name="title_activity_main_menu_ativity">MainMenuAtivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="insira_seu_email_aqui">Insira seu email aqui</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="aqui_voc_pode_recuperar_a_senha_do_seu_usu_rio">Aqui você pode recuperar a senha do seu usuário.</string>

    <string name="sobrenome">Sobrenome</string>
    <string name="data_nascimento">Data nascimento</string>
    <string name="telefone">Telefone</string>
    <string name="repita_a_senha">Repita a senha</string>
    <string name="toque_na_imagem_para_altera_la">Toque na imagem para altera-la</string>
    <string name="novos">Novos</string>
    <string name="enviados">Enviados</string>
    <string name="entregues">Entregues</string>
    <string name="pedidos">Pedidos</string>
    <string name="departamentos">Departamentos</string>
    <string name="perfil">Perfil</string>
    <string name="senha">Senha</string>
    <string name="gerenciar_vendas">Gerenciar vendas</string>
    <string name="sair">Sair</string>
    <string name="fale_conosco">Fale conosco</string>
    <string name="endereco">Endereço</string>
    <string name="minha_loja">Minha Loja</string>
    <string name="atualizar_foto">Atualizar foto</string>
    <string name="nome">Nome</string>
    <string name="imagem_obtida_da_memoria">Imagem obtida da memoria</string>
    <string name="perfil_pessoal">Perfil pessoal</string>
    <string name="perfil_loja">Perfil Loja</string>
    <string name="descricao">Descrição</string>
    <string name="cidade">Cidade</string>
    <string name="horario_de_funcionamento">Horário de funcionamento</string>
    <string name="menu_departamento">Menu departamento</string>
    <string name="nome_cliente">Nome cliente</string>
    <string name="observacoes">Observações</string>
    <string name="modo_pagamento">Modo Pagamento</string>
    <string name="marcar_com_enviado">Marcar com enviado</string>
    <string name="cancelar_venda">Cancelar venda</string>
    <string name="produtos">Produtos</string>
    <string name="preco_total_dos_produtos">Preço total dos produtos</string>
    <string name="marcar_como_recebido">Marcar como recebido</string>
    <string name="cancelados">Cancelados</string>
    <string name="nome_departamento">Nome departamento</string>
    <string name="indicacao">Indicação</string>
    <string name="contra_indicacao">Contra indicação</string>
    <string name="nome_do_medicamento">Nome do medicamento</string>
    <string name="dores_em_geral_febre">Dores em geral, febre</string>
    <string name="suspeita_de_dengue">Suspeita de dengue</string>
    <string name="cx_10_comprimidos_solucao_gotas_10ml">Cx. 10 comprimidos</string>
    <string name="r_10_00">R$ 10.00</string>
    <string name="pre_o">Preço</string>
    <string name="frete">Frete</string>
    <string name="salvar">Salvar</string>
    <string name="ingrediente_ativo">Ingrediente ativo</string>
    <string name="fechar">Fechar</string>
    <string name="editar">Editar</string>
    <string name="apagar">Apagar</string>
    <string name="voltar">Voltar</string>
    <string name="remover_das_buscas">Remover das buscas</string>
    <string name="inserir_nas_buscas">Inserir nas buscas</string>
    <string name="apenas_salvar">Apenas salvar</string>
    <string name="salvar_e_publicar">Salvar e publicar</string>
    <string name="toque_na_imagem_para_alter_la">Toque na imagem para alterá-la</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="avaliacoes">Avaliações</string>
    <string name="default_notification_channel_id">default</string>
    <string name="channel_description">notification channel</string>
    <string name="channel_name">Bula</string>
    <string name="card">Cartão</string>
    <string name="money">Dinheiro</string>
    <string name="alert_dialog_medicine_manager">As informações cadastradas estão corretas?</string>
</resources>
