<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:padding="16dp"
    android:orientation="vertical"
    android:background="#00ffffff"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textAlert"
        android:textColor="#000000"
        android:padding="10dp"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/editar"
        android:layout_marginTop="20dp"
        android:layout_below="@id/textAlert"
        android:textColor="#ffffff"
        android:text="@string/editar"
        android:background="@drawable/background_button_rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/save_publish"
        android:layout_marginTop="20dp"
        android:layout_below="@id/editar"
        android:textColor="#ffffff"
        android:text="@string/inserir_nas_buscas"
        android:background="@drawable/background_button_rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/depublish"
        android:layout_marginTop="20dp"
        android:layout_below="@id/save_publish"
        android:textColor="#ffffff"
        android:text="@string/remover_das_buscas"
        android:background="@drawable/background_button_rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/apagar"
        android:background="@drawable/background_button_rounded"
        android:layout_below="@id/depublish"
        android:text="@string/apagar"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/fechar"
        android:background="@drawable/background_button_rounded"
        android:text="@string/voltar"
        android:textColor="#ffffff"
        android:layout_below="@id/apagar"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>