<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".departamentManager.view.MedicineManager">

    <include layout="@layout/action_bar_general"/>

    <ScrollView
        android:id="@+id/main_layout"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:src="@drawable/ic_launcher_foreground"
                    android:layout_marginTop="20dp"
                    android:id="@+id/medicine_image"
                    android:layout_centerHorizontal="true"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:onClick="getImage"/>

                <TextView
                    android:layout_below="@id/medicine_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/toque_na_imagem_para_alter_la"/>

            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/nome"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/medicine_name"
                        android:hint="@string/nome_do_medicamento"
                        android:layout_marginTop="10dp"
                        android:inputType="textMultiLine"
                        android:padding="10dp"
                        android:background="@drawable/background_input_rounded"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/descricao"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/medicine_description"
                        android:hint="@string/cx_10_comprimidos_solucao_gotas_10ml"
                        android:layout_marginTop="10dp"
                        android:inputType="textMultiLine"
                        android:padding="10dp"
                        android:background="@drawable/background_input_rounded"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/ingrediente_ativo"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/medicine_active"
                        android:hint="@string/ingrediente_ativo"
                        android:inputType="text"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:background="@drawable/background_input_rounded"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/indicacao"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/medicine_indication"
                        android:hint="@string/dores_em_geral_febre"
                        android:layout_marginTop="10dp"
                        android:inputType="textMultiLine"
                        android:padding="10dp"
                        android:background="@drawable/background_input_rounded"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/contra_indicacao"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/medicine_no_indication"
                        android:hint="@string/suspeita_de_dengue"
                        android:inputType="textMultiLine"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:background="@drawable/background_input_rounded"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/pre_o"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/medicine_value"
                        android:hint="@string/r_10_00"
                        android:inputType="numberDecimal"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:background="@drawable/background_input_rounded"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:onClick="save"
                android:text="@string/salvar"
                android:textColor="#ffffff"
                android:background="@drawable/background_button_rounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>