<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".recoveryPassword.views.RecoveryPasswordActivity">

    <include layout="@layout/action_bar_general"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_marginTop="?attr/actionBarSize"
        tools:context="com.gikacredgmail.gika.cadastroeLogin.RecuperarSenha">

        <TextView
            android:id="@+id/dicaRecuperarSenha"
            android:padding="10dp"
            android:text="@string/aqui_voc_pode_recuperar_a_senha_do_seu_usu_rio"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_marginRight="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp" />


        <EditText
            android:layout_below="@id/dicaRecuperarSenha"
            android:id="@+id/email"
            android:padding="15dp"
            android:hint="@string/insira_seu_email_aqui"
            android:background="@drawable/background_input_rounded"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:layout_below="@id/email"
            android:layout_marginTop="40sp"
            android:layout_centerHorizontal="true"
            android:text="@string/recuperar_senha"
            android:textColor="#ffffffff"
            android:background="@drawable/background_button_rounded"
            android:padding="10dp"
            android:textStyle="bold"
            android:onClick="reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>